# mcp-ore-client

./: Cargo.toml  mcp.sh  prompt.txt
src/: main.rs
